clap/backends/clap-2t-fastapi/gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clap-2t-gateway
spec:
  selector:
    app: clap-2t-gateway
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
